<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ordersicon"
        android:title="@string/title_all_orders" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/carticon"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ring_ic"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/profileicon"
        android:title="@string/title_profil" />

</menu>