<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projet_mobile.main.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_restaurantFragment"
            app:destination="@id/restaurantFragment" />
    </fragment>

    <fragment
        android:id="@+id/order"
        android:name="com.example.projet_mobile.main.AllOrders"
        android:label="title_search"
        tools:layout="@layout/fragment_all_orders" />
    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.projet_mobile.main.Cart"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart"
        >
        <action
            android:id="@+id/action_navigation_cart_to_order"
            app:destination="@id/order" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.projet_mobile.main.NotificationPage"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification_page" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.projet_mobile.main.Profil"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil">
         <action
            android:id="@+id/action_profil_to_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="com.example.projet_mobile.RegisterFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment" />
    </fragment>


    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.projet_mobile.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_loginFragment_to_register"
            app:destination="@id/register">
            <argument
                android:name="name"
                app:argType="string" />
            <argument
                android:name="adresse"
                app:argType="string" />
            <argument
                android:name="email"
                app:argType="string" />
            <argument
                android:name="phone"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_loginFragment_to_profil"
            app:destination="@id/navigation_profil" />
    </fragment>
    <fragment
        android:id="@+id/restaurantFragment"
        android:name="com.example.projet_mobile.main.restaurants_menu.RestaurantPage"
        android:label="Restaurant"
        tools:layout="@layout/fragment_restaurant_page">
        <action
            android:id="@+id/action_go_to_menu_details"
            app:destination="@id/menu_details" />

    </fragment>
    <fragment
        android:id="@+id/menu_details"
        android:name="com.example.projet_mobile.main.restaurants_menu.menu.MenuDetails"
        android:label="Menu"
        tools:layout="@layout/fragment_menu_details">


    </fragment>
</navigation>